@@ -1,4 +1,4 @@
-@comment $NetBSD$
+@comment $NetBSD: PLIST,v 1.3 2012/07/01 14:05:07 wiz Exp $
 bin/vsd2raw
 bin/vsd2text
 bin/vsd2xhtml
@@ -68,6 +68,8 @@ share/doc/libvisio/html/VisioDocument_8cpp.html
 share/doc/libvisio/html/VisioDocument_8h.html
 share/doc/libvisio/html/VisioDocument_8h_source.html
 share/doc/libvisio/html/annotated.html
+share/doc/libvisio/html/bc_s.png
+share/doc/libvisio/html/bdwn.png
 share/doc/libvisio/html/classVSDInternalStream-members.html
 share/doc/libvisio/html/classVSDInternalStream.html
 share/doc/libvisio/html/classes.html
@@ -233,10 +235,14 @@ share/doc/libvisio/html/classlibvisio_1_1VSDXTextField.html
 share/doc/libvisio/html/classlibvisio_1_1VSDXTextField.png
 share/doc/libvisio/html/classlibvisio_1_1VisioDocument-members.html
 share/doc/libvisio/html/classlibvisio_1_1VisioDocument.html
+share/doc/libvisio/html/closed.png
+share/doc/libvisio/html/dir_000000.html
+share/doc/libvisio/html/dir_000001.html
 share/doc/libvisio/html/doxygen.css
 share/doc/libvisio/html/doxygen.png
 share/doc/libvisio/html/files.html
 share/doc/libvisio/html/ftv2blank.png
+share/doc/libvisio/html/ftv2cl.png
 share/doc/libvisio/html/ftv2doc.png
 share/doc/libvisio/html/ftv2folderclosed.png
 share/doc/libvisio/html/ftv2folderopen.png
@@ -244,9 +250,12 @@ share/doc/libvisio/html/ftv2lastnode.png
 share/doc/libvisio/html/ftv2link.png
 share/doc/libvisio/html/ftv2mlastnode.png
 share/doc/libvisio/html/ftv2mnode.png
+share/doc/libvisio/html/ftv2mo.png
 share/doc/libvisio/html/ftv2node.png
+share/doc/libvisio/html/ftv2ns.png
 share/doc/libvisio/html/ftv2plastnode.png
 share/doc/libvisio/html/ftv2pnode.png
+share/doc/libvisio/html/ftv2splitbar.png
 share/doc/libvisio/html/ftv2vertline.png
 share/doc/libvisio/html/functions.html
 share/doc/libvisio/html/functions_0x61.html
@@ -326,13 +335,17 @@ share/doc/libvisio/html/libvisio_8h_source.html
 share/doc/libvisio/html/libvisio__utils_8cpp.html
 share/doc/libvisio/html/libvisio__utils_8h.html
 share/doc/libvisio/html/libvisio__utils_8h_source.html
-share/doc/libvisio/html/main.html
 share/doc/libvisio/html/namespacelibvisio.html
 share/doc/libvisio/html/namespacemembers.html
 share/doc/libvisio/html/namespacemembers_enum.html
 share/doc/libvisio/html/namespacemembers_eval.html
 share/doc/libvisio/html/namespacemembers_func.html
 share/doc/libvisio/html/namespaces.html
+share/doc/libvisio/html/nav_f.png
+share/doc/libvisio/html/nav_g.png
+share/doc/libvisio/html/nav_h.png
+share/doc/libvisio/html/navtree.css
+share/doc/libvisio/html/open.png
 share/doc/libvisio/html/structlibvisio_1_1ChunkHeader-members.html
 share/doc/libvisio/html/structlibvisio_1_1ChunkHeader.html
 share/doc/libvisio/html/structlibvisio_1_1Colour-members.html
@@ -359,5 +372,8 @@ share/doc/libvisio/html/structlibvisio_1_1VSDXTextBlockStyle-members.html
 share/doc/libvisio/html/structlibvisio_1_1VSDXTextBlockStyle.html
 share/doc/libvisio/html/structlibvisio_1_1XForm-members.html
 share/doc/libvisio/html/structlibvisio_1_1XForm.html
+share/doc/libvisio/html/tab_a.png
+share/doc/libvisio/html/tab_b.png
+share/doc/libvisio/html/tab_h.png
+share/doc/libvisio/html/tab_s.png
 share/doc/libvisio/html/tabs.css
-share/doc/libvisio/html/tree.html
