@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.352 2012/05/25 20:40:08 wiz Exp $
+# $NetBSD: Makefile,v 1.353 2012/07/04 18:05:26 drochner Exp $
 #
 
 COMMENT=	Games
@@ -270,6 +270,7 @@ SUBDIR+=	ufoai
 SUBDIR+=	urban
 SUBDIR+=	velena
 SUBDIR+=	vms-empire
+SUBDIR+=	wargames
 SUBDIR+=	warmux
 SUBDIR+=	warzone2100
 SUBDIR+=	wesnoth
