@@ -1,0 +1,3 @@
+The wargames shell script (and associated helper wopr binary)
+simulates the interaction with the W.O.P.R. computer from the film
+War Games.
