@@ -1,0 +1,3 @@
+@comment $NetBSD$
+bin/wargames
+bin/wopr
