@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (abs0-wargames-1.01-0-gcb24609.tar.gz) = daa40cd8aa3d9c2a80d064adb678f1ce4b2d6470
+RMD160 (abs0-wargames-1.01-0-gcb24609.tar.gz) = 9c8e394b62b7b22a917ef91df73774e18ac55944
+Size (abs0-wargames-1.01-0-gcb24609.tar.gz) = 6303 bytes
