@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2204 2012/07/07 12:36:25 asau Exp $
+$NetBSD: CHANGES-2012,v 1.2207 2012/07/07 20:33:20 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -3441,3 +3441,6 @@ Changes to the packages collection and infrastructure in 2012:
 	Added devel/p5-Autodia version 2.14 [wiz 2012-07-07]
 	Updated net/samba35 to 3.5.16 [asau 2012-07-07]
 	Updated multimedia/mjpegtools to 2.0.0 [adam 2012-07-07]
+	Added games/wargames version 1.01 [abs 2012-07-07]
+	Updated editors/xournal to 0.4.7 [wiz 2012-07-07]
+	Updated devel/mercurial to 2.2.3 [wiz 2012-07-07]
